--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -1,1 +1,146 @@
-George Mugerian
+[[Image:Ballpoint-pen-parts.jpg|thumb|right|A ballpoint pen, showing assembly.]]
+==English==
+
+===Pronunciation===
+*{{IPA|/pεn/}}
+*{{SAMPA|/pEn/}}
+*{{audio|en-us-pen.ogg|Audio (US)}}
+*{{audio|en-us-inlandnorth-pen.ogg|Audio (US-Inland North)}}
+*Rhymes: [[Rhymes:English:-ɛn|-ɛn]]
+
+===Noun===
+{{en-noun}}
+
+# A utensil, usually [[tubular]] in form, containing ink used to [[write]] or make marks.
+#: ''He took notes with a '''pen'''.''
+# A mark made with [[ink]].
+#: ''I need some stain remover, this mark is in '''pen'''.''
+# An [[enclose]]d area used to contain [[domesticated]] animals, especially [[sheep]] or [[cattle]].
+#: ''There are two steers in the third '''pen'''.''
+# {{baseball}} The [[bullpen]].
+#: ''Two righties are up in the '''pen'''.''
+# A female [[swan]].
+
+====Related terms====
+{{top}}
+*[[penmanship]]
+*[[ball-point pen]]
+*[[cartridge pen]]
+{{mid}}
+*[[felt-tip pen]]
+*[[fountain pen]]
+*[[poison pen]]
+{{bottom}}
+
+====Translations====
+;writing utensil
+{{top}}
+*Arabic: {{ARchar|[[قلم]]}} (qálam)
+*Dutch: pen {{f}}
+*Finnish: [[mustekynä]]
+*French: [[stylo]] {{m}}
+*German: [[Stift]] {{m}}
+*Hebrew: [[עט|עֵט]] (et) {{m}}
+*Hungarian: [[toll]]
+*Indonesian: pen, [[pena]]
+*Irish: [[peann]] {{m}}
+*Italian: [[penna#Italian|penna]] {{f}}
+*Japanese: [[ペン]] (pen)
+{{mid}}
+*Norwegian: [[penn]] {{m}}
+*Persian: {{FAchar|[[قلم]]}} (ghalam)
+*Polish: [[pióro]] {{n}}, [[długopis]] {{m}}
+*Portuguese: [[caneta]] {{f}}
+*Russian: [[ручка]] (rúčka) {{f}}
+*Scottish Gaelic: [[peann]] {{m}}
+*Spanish: [[esfero]] {{m}}, [[pluma]] {{f}}, [[bolígrafo]] {{m}}
+*Swedish: [[penna#Swedish|penna]]
+*[[Telugu]]: [[పెన్ను]], [[కలము]], [[కలం]] (pennu, kalamu, kalam)
+*Turkish: [[kalem]]
+{{bottom}}
+
+;an enclosed area
+{{top}}
+*French: [[enclos]] {{m}}
+*Italian: [[recinto]] {{m}}, [[chiuso]] {{m}}, {{italbrac|for sheep}} [[ovile]] {{m}}
+*Norwegian: [[innhegning]] {{f}}/{{m}}, [[kve]] {{n}}
+{{mid}}
+*Russian: [[загон]] (zagón) {{m}}
+*Spanish: [[corral]] {{m}}
+{{bottom}}
+
+;female swan
+{{top}}
+*French: [[cygne]] [[femelle]] {{m}}
+*Norwegian: [[hunnsvane]] {{m}}
+{{mid}}
+*Russian: [[лебёдка]] (lebjódka) {{f}}
+{{bottom}}
+
+===Transitive verb===
+'''to pen''' ([[penned]] / [[pent]], penned / pent)
+
+# To write (an article, a book, etc.)
+# To enclose. The irregular past tense ''pent'' is primarily used in a figurative sense in the phrase “pent up”.
+
+====Translations====
+;to write
+{{top}}
+*French: [[écrire]]
+*Italian: [[scrivere]]
+*Norwegian: [[skrive]], [[føre i pennen]]
+{{mid}}
+*Portuguese: [[escrever]]
+*Russian: [[писать]] / [[написать]] (pisát’ / napisát’)
+{{bottom}}
+
+;to enclose
+*Norwegian: [[innhegne]]
+
+----
+
+==Dutch==
+
+===Pronunciation===
+*[[w:IPA|IPA]]: /pεn/
+*[[w:SAMPA|SAMPA]]: /pEn/
+
+===Noun===
+'''pen''' ''m''
+
+# pen {{italbrac|writing utensil}}
+
+----
+
+==Norwegian==
+
+===Adjective===
+'''pen'''
+
+# [[beautiful]]
+
+[[Category:1000 English basic words]]
+
+[[am:pen]]
+[[ca:pen]]
+[[de:pen]]
+[[es:pen]]
+[[fa:pen]]
+[[fr:pen]]
+[[ko:pen]]
+[[io:pen]]
+[[id:pen]]
+[[it:pen]]
+[[kk:pen]]
+[[hu:pen]]
+[[nl:pen]]
+[[ja:pen]]
+[[no:pen]]
+[[pl:pen]]
+[[pt:pen]]
+[[ru:pen]]
+[[fi:pen]]
+[[ta:pen]]
+[[vi:pen]]
+[[uk:pen]]
+[[zh:pen]]
