--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -27,6 +27,7 @@ From the Latin [[id est]], meaning “that is”.
 {{mid}}
 *Italian: [[cioè]]
 *Polish: [[tzn.]] (''[[to]] [[znaczyć|znaczy]]'')
+*Portuguese: [[isto é]]
 *Russian: [[т.е.]] ([[то есть]], ''tó jest’)
 *Spanish: [[es decir]]
 *Swedish: [[dvs]], [[d v s]], [[d.v.s.]] (''det vill säga'')
