--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -239,7 +239,7 @@
 
 =====Translations to be categorized=====
 {{checktrans}}
-<!--Remove this section once all of the translations below have been moved into the tables above.-->
+{{top}}
 *{{ttbc|Arabic}}: [[برقوق]] (barqūq), [[خوخ]] (khaukh)
 *{{ttbc|Binisayâ}}: [[sirwelas]]
 *{{ttbc|Bulgarian}}: [[слива]] (sliva) {{f}} (2)
@@ -250,9 +250,9 @@
 *{{ttbc|Estonian}}: [[ploom]]
 *{{ttbc|Frisian}}: [[prom]] (2), [[rezyn]] (5)
 *{{ttbc|Galician}}: [[ameixeira]] {{f}} (1), [[ameixa]] {{f}} (2)
-*{{ttbc|Greek}}: [[δαμασκηνιά]] (dhamaskiniá) {{f}} (1), [[δαμάσκηνο]] (dhamáskino) {{n}} (2)
 *{{ttbc|Hungarian}}: [[szilva]]
 *{{ttbc|Irish}}: [[pluma]] {{m}}, [[prúna]] {{m}}
+{{mid}}
 *{{ttbc|Latin}}: [[prunum]] {{n}}
 *{{ttbc|Lithuanian}}: [[slyva]] {{f}} (1, 2), [[slyvinis]] {{m}} (3)
 *{{ttbc|Luxembourgish}}: [[Praum]] {{f}}, [[Promm]] {{f}}
@@ -264,6 +264,7 @@
 *{{ttbc|Volapük}}: [[plöm]]
 *{{ttbc|Welsh}}: [[eirinen]] {{f}}
 *{{ttbc|Zulu}}: [[iplamu]], [[ithungulu]]
+{{bottom}}
 
 [[Category:Trees]]
 
