--- a/en/惢/惢.15607.wikitext
+++ b/en/惢/惢.15607.wikitext
@@ -2,9 +2,13 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=08|sn=12|four=3333<sub>0</sub>|canj=心心心 (PPP)}}
 # {{defn|Han|sort=心08}}
+1. (to) be puzzled  
+2. (to) be good
+
 ====References====
 {{Han ref|kx=0391.270|dkj=10826|dj=0727.030|hdz=42312.080|uh=60E2|ud=24802|bh=D8FB|bd=55547}}
 ----
+
 ==Japanese==
 ===Kanji===
 {{ja-kanji|grade=|rs=心08}}
