--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -157,6 +157,7 @@ English transcriptions of Chinese speech often fail to distinguish between the s
 [[ru:pen]]
 [[simple:pen]]
 [[fi:pen]]
+[[sv:pen]]
 [[ta:pen]]
 [[vi:pen]]
 [[uk:pen]]
