--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -26,7 +26,7 @@
 {{mid}}
 *Russian: [[блондин]] (blondín) {{m}}, [[блондинка]] (blondínka) {{f}}
 *[[Scots Gaelic]]: [[bàn]], [[fionn]] (of both males and females), [[fear#Scots Gaelic|fear]] bàn {{m}}, [[bean#Scottish Gaelic|bean]] bhàn {{f}}
-*[[Spanish]]: [[rubio]] {{m}}, [[catire]] {{m}} (''Venezuela'') ; [[güero]] {{m}} (''Mexico''). For female : rubia, catira, güera.
+*[[Spanish]]: [[rubio]] {{m}}, [[catire]] {{m}} (''Venezuela''), [[güero]] {{m}} (''Mexico''), [[mono]] {{m}} (''Colombia'') , [[gringo]] (''Peru''). For female : rubia, catira, güera, mona, gringa.
 *Swedish: [[blondin]]
 *[[Welsh]]: [[penfelyn]]
 {{bottom}}
