--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -5,9 +5,10 @@
 *{{audio|en-us-pull.ogg|Audio (US)}}
 *:Rhymes: [[Rhymes:English:-ʊl|-ʊl]]
 ===Etymology===
-Old English ''[[pullian]]''
+{{OE.}} ''[[pullian]]''
+
 ===Transitive verb===
-'''to pull''' ([[pulls]], [[pulled]], [[pulling]])
+{{en-verb}}
 
 #To apply a [[force]] to (an object) such that it comes [[toward]] the person applying the force.
 #(''slang'') To persuade (someone) to have sex with one or to be 'on the pull' (willing to have sex).
@@ -52,7 +53,7 @@ Old English ''[[pullian]]''
 {{bottom}}
 
 ===Intransitive verb===
-'''to pull''' ([[pulls]], [[pulled]], [[pulling]])
+{{en-verb}}
 
 #To apply a [[force]] such that an object comes [[toward]] the person applying the force.
 #:''You're going to have to pull harder to get that cork out of the bottle.''
@@ -72,7 +73,7 @@ Old English ''[[pullian]]''
 {{bottom}}
 
 ===Noun===
-'''pull''' (''plural'' '''pulls''')
+{{en-noun}}
 
 #An act of pulling.
 #:''He gave the hair a sharp '''pull''' and it came out.''
@@ -130,9 +131,16 @@ Old English ''[[pullian]]''
 
 ==French==
 
+===Pronunciation===
+*/pyl/
+
+===Etymology===
+From {{E.}} [[pullover]].
+
 ===Noun===
-'''pull''' ''m''
+{{en-noun|m}}
 # [[pullover]], [[sweatshirt]]
+#: ''Il fait froid, je vais mettre mon '''pull'''.''
 
 [[Category:fr:Clothing]]
 
