--- a/en/意/意.15651.wikitext
+++ b/en/意/意.15651.wikitext
@@ -11,7 +11,7 @@
 {{yue-hanzi|jyut=|y=yi3}}
 # {{defn|Cantonese}}
 ----
-==Mandarin==
+==Mandarin=={{rfc-auto}}
 ===Hanzi===
 {{cmn-hanzi|pin=[[yì]] (yi4)|wg=i<sup>4</sup>}}
 # {{defn|Mandarin}}
