--- a/en/意/意.15651.wikitext
+++ b/en/意/意.15651.wikitext
@@ -1,21 +1,47 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=13|four=0033<sub>6</sub>|canj=卜廿日心 (YTAP)}}
 # [[thought]], [[idea]], [[opinion]]
 # [[think]]
+
 ====References====
 {{Han ref|kx=0394.220|dkj=10921|dj=0730.280|hdz=42323.030|uh=610F|ud=24847|bh=B74E|bd=46926}}
+
 ----
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=yi3}}
 # {{defn|Cantonese}}
+
 ----
-==Mandarin=={{rfc-auto}}
+==Japanese==
+
+===Kanji===
+{{ja-kanji|grade=|rs=心09}}
+# {{defn|Japanese}} 
+
+====Readings====
+{{ja-readings|on=[[い]] (i)|kun=[[こころ]] (kokoro), [[おもい]] (omoi), [[おもう]] (omou)}}
+
+====Compounds====
+*[[意味]]
+
+----
+==Korean==
+
+===Hanja===
+{{ko-hanja|hangeul=의|eumhun=|rv=ui|mr=ŭi|y=uy}}
+# {{defn|Korean}}
+
+----
+==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yì]] (yi4)|wg=i<sup>4</sup>}}
 # {{defn|Mandarin}}
-{{rfc-auto}}
+
 ====Compounds====
 {{top2}}
 *[[意表]]
@@ -56,23 +82,6 @@
 *[[意志]]
 *[[意中人]]
 {{bottom}}
-
-
-
-== Japanese ==
-===Kanji===
-{{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
-====Readings====
-{{ja-readings|on=[[い]] (i)|kun=[[こころ]] (kokoro), [[おもい]] (omoi), [[おもう]] (omou)}}
-
-====Compounds====
-*[[意味]]
-
-==Korean==
-===Hanja===
-{{ko-hanja|hangeul=의|eumhun=|rv=ui|mr=ŭi|y=uy}}
-# {{defn|Korean}}
 
 [[fr:意]]
 [[ko:意]]
