--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -27,10 +27,7 @@ From {{F.}} ''[[beauté]]'', beauty, + Germanic ''[[-ful]]'', full of
 *(''well executed''): [[excellent]], [[exceptional]], [[good]], [[great]], [[marvellous]]/[[marvelous]], [[perfect]], [[stylish]], [[wonderful]]
 *(''ironic: how unfortunate''): [[great]], [[marvellous]]/[[marvelous]], [[nice]], very nice, [[wonderful]] (''any of these can be prefixed with an [[intensifier]] such as'' [[bloody]], [[damned]] ''or'' [[just]])
 
-====Antonyms====
-*(''possessing charm and attractive''): [[grotesque]], [[hideous]], [[homely]], [[plain]], [[misshapen]], [[repulsive]], [[ugly]]
-*(''of the weather''): [[bad]], [[cloudy]], [[dull]], [[miserable]], [[overcast]], [[rainy]], [[wet]]
-*(''well executed''): [[average]], [[bad]], [[mediocre]], [[poor]], [[shoddy]], [[substandard]], [[terrible]], [[weak]]
+doug steinke bald rock did mary-beth pine shes soooooooooooooo hotttttt shes a milf
 
 ====Derived terms====
 *[[beautifully]]
