--- a/en/p/Pythonesque.2111.wikitext
+++ b/en/p/Pythonesque.2111.wikitext
@@ -4,12 +4,10 @@
 From the name of the British comedy troupe, Monty Python, and due to the type of humour in it.
 
 ===Adjective===
-'''Pythonesque''' or '''pythonesque'''
+{{en-adj}}
 
 # [[surreal]] or [[absurd]] [[humour]]
 
 ===See also===
 *[[w:Monty Python|Monty Python]]
 *[[w:Monty Python's Flying Circus|Monty Python’s Flying Circus]]
-
-[[Category:English adjectives that lack inflection template]]
