--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -1,22 +1,30 @@
 ==Translingual==
+
 ===Etymology===
 From [[日]] ‘sun’ + [[月]] ‘moon’.
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=6702<sub>0</sub>|canj=日月 (AB)}}
 # [[bright]], [[light]], [[brilliant]]
 # [[clear]]
+
 ====References====
 {{Han ref|kx=0491.120|dkj=13805|dj=0852.180|hdz=21491.080|uh=660E|ud=26126|bh=A9FA|bd=43514}}
+
 ----
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=ming4|y=ming4}}
 # {{defn|Cantonese}}
+
 ----
-== Japanese ==
+==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=2|rs=日04}}
-# {{defn|Japanese}} 
+# {{defn|Japanese}}
+
 ====Readings====
 {{ja-readings|on=[[めい]] (mei), [[みょう]] (myō)|kun=[[あかるい]] ([[明るい]], akarui), [[あきらか]] ([[明らか]], akiraka), [[あける]] ([[明ける]], akeru)}}
 
@@ -42,13 +50,17 @@ From [[日]] ‘sun’ + [[月]] ‘moon’.
 *[[明徳]]
 *[[明白]]
 *[[明瞭]]
+
 ----
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=명|eumhun=|rv=myeong|mr=myŏng|y=myeng}}
 # {{defn|Korean}}
+
 ----
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[míng]] (ming2)|wg=ming<sup>2</sup>}}
 # {{defn|Mandarin}}
@@ -88,10 +100,12 @@ From [[日]] ‘sun’ + [[月]] ‘moon’.
 *[[明显]]
 *[[明星]]
 
-===Phrases===
+====Phrases====
 *[[明抢臆躲，暗箭难防]]
+
 ----
 ==Vietnamese==
+
 ===Han character===
 {{vi-hantu|[[minh]]}}
 # {{defn|Vietnamese}}
