--- a/en/想/想.15624.wikitext
+++ b/en/想/想.15624.wikitext
@@ -16,7 +16,7 @@
 ----
 ==Japanese==
 ===Kanji===
-{{ja-kanji|grade=|rs=心09}}
+{{ja-kanji|grade=3|rs=心09}}
 # {{defn|Japanese}} 
 ====Readings====
 {{ja-readings|on=[[そう]] (sō), [[そ]] (so)|kun=[[おもう]] (omou), [[おもい]] (omoi)}}
