--- a/en/感/感.15666.wikitext
+++ b/en/感/感.15666.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Japanese==
 ===Kanji===
-{{ja-kanji|grade=|rs=心09}}
+{{ja-kanji|grade=3|rs=心09}}
 # {{defn|Japanese}} 
 ====Readings====
 {{ja-readings|on=[[かん]] (kan)|kun=[[かんじる]] (kanjiru)}}
