--- a/en/昭/昭.16981.wikitext
+++ b/en/昭/昭.16981.wikitext
@@ -13,7 +13,7 @@
 ----
 ==Japanese==
 ===Kanji===
-{{ja-kanji|grade=|rs=日05}}
+{{ja-kanji|grade=3|rs=日05}}
 # {{defn|Japanese}} 
 ====Readings====
 {{ja-readings|on=[[しょう]] (shō)|kun=[[あきらか]] (akiraka)}}
