--- a/en/偷/偷.11143.wikitext
+++ b/en/偷/偷.11143.wikitext
@@ -30,7 +30,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[tōu]] (tou1)|wg=t'ou<sup>1</sup>}}
+{{cmn-hanzi|pin=[[tōu]] ([[tou1]])|wg=t'ou<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:偷]]
