--- a/en/偸/偸.11144.wikitext
+++ b/en/偸/偸.11144.wikitext
@@ -21,7 +21,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[tōu]] (tou1)|wg=t'ou<sup>1</sup>}}
+{{cmn-hanzi|pin=[[tōu]] ([[tou1]])|wg=t'ou<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:偸]]
