--- a/en/偹/偹.11145.wikitext
+++ b/en/偹/偹.11145.wikitext
@@ -21,7 +21,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[bèi]] (bei4)|wg=pei<sup>4</sup>}}
+{{cmn-hanzi|pin=[[bèi]] ([[bei4]])|wg=pei<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:偹]]
