--- a/en/偼/偼.11148.wikitext
+++ b/en/偼/偼.11148.wikitext
@@ -7,7 +7,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[jié]] (jie2), [[wèi]] (wei4)|wg=chieh<sup>2</sup>, wei<sup>4</sup>}}
+{{cmn-hanzi|pin=[[jié]] ([[jie2]]), [[wèi]] ([[wei4]])|wg=chieh<sup>2</sup>, wei<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 
