--- a/en/傁/傁.11153.wikitext
+++ b/en/傁/傁.11153.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[fū]] (fu1), [[sǒu]] (sou3)|wg=fu<sup>1</sup>, sou<sup>3</sup>}}
+{{cmn-hanzi|pin=[[fū]] ([[fu1]]), [[sǒu]] ([[sou3]])|wg=fu<sup>1</sup>, sou<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:傁]]
