--- a/en/傄/傄.11156.wikitext
+++ b/en/傄/傄.11156.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[xiā]] (xia1)|wg=hsia<sup>1</sup>}}
+{{cmn-hanzi|pin=[[xiā]] ([[xia1]])|wg=hsia<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:傄]]
