--- a/en/傆/傆.11158.wikitext
+++ b/en/傆/傆.11158.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[páng]] (pang2), [[yuàn]] (yuan4)|wg=p'ang<sup>2</sup>, yüan<sup>4</sup>}}
+{{cmn-hanzi|pin=[[páng]] ([[pang2]]), [[yuàn]] ([[yuan4]])|wg=p'ang<sup>2</sup>, yüan<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:傆]]
