--- a/en/傇/傇.11159.wikitext
+++ b/en/傇/傇.11159.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[rǒng]] (rong3)|wg=jung<sup>3</sup>}}
+{{cmn-hanzi|pin=[[rǒng]] ([[rong3]])|wg=jung<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:傇]]
