--- a/en/傉/傉.11161.wikitext
+++ b/en/傉/傉.11161.wikitext
@@ -7,7 +7,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[rù]] (ru4)|wg=ju<sup>4</sup>}}
+{{cmn-hanzi|pin=[[rù]] ([[ru4]])|wg=ju<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 
