--- a/en/傓/傓.11173.wikitext
+++ b/en/傓/傓.11173.wikitext
@@ -19,7 +19,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[chéng]] (cheng2), [[shàn]] (shan4)|wg=ch'eng<sup>2</sup>, shan<sup>4</sup>}}
+{{cmn-hanzi|pin=[[chéng]] ([[cheng2]]), [[shàn]] ([[shan4]])|wg=ch'eng<sup>2</sup>, shan<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:傓]]
