--- a/en/傔/傔.11174.wikitext
+++ b/en/傔/傔.11174.wikitext
@@ -24,7 +24,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[qiàn]] (qian4)|wg=ch'ien<sup>4</sup>}}
+{{cmn-hanzi|pin=[[qiàn]] ([[qian4]])|wg=ch'ien<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:傔]]
