--- a/en/傗/傗.11178.wikitext
+++ b/en/傗/傗.11178.wikitext
@@ -7,7 +7,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[chù]] (chu4), [[róng]] (rong2)|wg=ch'u<sup>4</sup>, jung<sup>2</sup>}}
+{{cmn-hanzi|pin=[[chù]] ([[chu4]]), [[róng]] ([[rong2]])|wg=ch'u<sup>4</sup>, jung<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 
