--- a/en/備/備.11180.wikitext
+++ b/en/備/備.11180.wikitext
@@ -26,7 +26,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|sim=备|pin=[[bèi]] (bei4)|wg=pei<sup>4</sup>}}
+{{cmn-hanzi|sim=备|pin=[[bèi]] ([[bei4]])|wg=pei<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:備]]
