--- a/en/傚/傚.11181.wikitext
+++ b/en/傚/傚.11181.wikitext
@@ -24,7 +24,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[xiào]] (xiao4)|wg=hsiao<sup>4</sup>}}
+{{cmn-hanzi|pin=[[xiào]] ([[xiao4]])|wg=hsiao<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:傚]]
