--- a/en/傜/傜.11183.wikitext
+++ b/en/傜/傜.11183.wikitext
@@ -24,7 +24,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[tà]] (ta4), [[yáo]] (yao2)|wg=t'a<sup>4</sup>, yao<sup>2</sup>}}
+{{cmn-hanzi|pin=[[tà]] ([[ta4]]), [[yáo]] ([[yao2]])|wg=t'a<sup>4</sup>, yao<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:傜]]
