--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -48,6 +48,7 @@ From {{F.}} ''[[beauté]]'', beauty, + Germanic ''[[-ful]]'', full of
 *Arabic: {{ARchar|[[جميل]]}} (jamil)
 *[[Breton]]: [[brav]], [[kaer]]
 *Bulgarian: [[красив]], [[прекрасен]]
+*Catalan: [[bell]], [[formós]]
 *Chinese: [[漂亮]] (piàoliàng, piao4liang4), [[美]] (měi, meili, mei3li4)
 *Danish: [[smuk]] ''en'', [[smukt]] ''et'', [[smukke]] {{p}}
 *Dutch: [[mooi]]
