--- a/en/垍/垍.13072.wikitext
+++ b/en/垍/垍.13072.wikitext
@@ -7,7 +7,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[jì]] (ji4), [[léi]] (lei2), [[lèi]] (lei4), [[lǜ]] (lü4)|wg=chi<sup>4</sup>, lei<sup>2</sup>, lei<sup>4</sup>, lü<sup>4</sup>}}
+{{cmn-hanzi|pin=[[jì]] ([[ji4]]), [[léi]] ([[lei2]]), [[lèi]] ([[lei4]]), [[lǜ]] ([[lü4]])|wg=chi<sup>4</sup>, lei<sup>2</sup>, lei<sup>4</sup>, lü<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:垍]]
