--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -45,7 +45,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[dì]] (di4), [[de]] (de5)|wg=ti<sup>4</sup>}}
+{{cmn-hanzi|pin=[[dì]] ([[di4]]), [[de]] ([[de5]])|wg=ti<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 ====Compounds====
