--- a/en/圱/圱.12979.wikitext
+++ b/en/圱/圱.12979.wikitext
@@ -7,7 +7,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[chǎng]] (chang3), [[qiān]] (qian1)|wg=ch'ang<sup>3</sup>, ch'ien<sup>1</sup>}}
+{{cmn-hanzi|pin=[[chǎng]] ([[chang3]]), [[qiān]] ([[qian1]])|wg=ch'ang<sup>3</sup>, ch'ien<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:圱]]
