--- a/en/圴/圴.12982.wikitext
+++ b/en/圴/圴.12982.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[zhuó]] (zhuo2)|wg=cho<sup>2</sup>}}
+{{cmn-hanzi|pin=[[zhuó]] ([[zhuo2]])|wg=cho<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:圴]]
