--- a/en/圵/圵.12983.wikitext
+++ b/en/圵/圵.12983.wikitext
@@ -7,7 +7,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[dàng]] (dang4)|wg=tang<sup>4</sup>}}
+{{cmn-hanzi|pin=[[dàng]] ([[dang4]])|wg=tang<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:圵]]
