--- a/en/场/场.12988.wikitext
+++ b/en/场/场.12988.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|tra=場|pin=[[cháng]] (chang2)|wg=ch'ang<sup>2</sup>}}
+{{cmn-hanzi|tra=場|pin=[[cháng]] ([[chang2]])|wg=ch'ang<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:场]]
