--- a/en/圻/圻.12990.wikitext
+++ b/en/圻/圻.12990.wikitext
@@ -26,7 +26,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[qí]] (qi2), [[yín]] (yin2)|wg=ch'i<sup>2</sup>, yin<sup>2</sup>}}
+{{cmn-hanzi|pin=[[qí]] ([[qi2]]), [[yín]] ([[yin2]])|wg=ch'i<sup>2</sup>, yin<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:圻]]
