--- a/en/圼/圼.12991.wikitext
+++ b/en/圼/圼.12991.wikitext
@@ -7,7 +7,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[jī]] (ji1), [[niè]] (nie4)|wg=chi<sup>1</sup>, nieh<sup>4</sup>}}
+{{cmn-hanzi|pin=[[jī]] ([[ji1]]), [[niè]] ([[nie4]])|wg=chi<sup>1</sup>, nieh<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:圼]]
