--- a/en/圿/圿.12994.wikitext
+++ b/en/圿/圿.12994.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[jiá]] (jia2), [[xùn]] (xun4)|wg=chia<sup>2</sup>, hsün<sup>4</sup>}}
+{{cmn-hanzi|pin=[[jiá]] ([[jia2]]), [[xùn]] ([[xun4]])|wg=chia<sup>2</sup>, hsün<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:圿]]
