--- a/en/坂/坂.12997.wikitext
+++ b/en/坂/坂.12997.wikitext
@@ -22,7 +22,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|tra=阪|pin=[[bǎn]] (ban3)|wg=pan<sup>3</sup>}}
+{{cmn-hanzi|tra=阪|pin=[[bǎn]] ([[ban3]])|wg=pan<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坂]]
