--- a/en/坄/坄.12999.wikitext
+++ b/en/坄/坄.12999.wikitext
@@ -7,7 +7,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[tóu]] (tou2), [[yùn]] (yun4)|wg=t'ou<sup>2</sup>, yün<sup>4</sup>}}
+{{cmn-hanzi|pin=[[tóu]] ([[tou2]]), [[yùn]] ([[yun4]])|wg=t'ou<sup>2</sup>, yün<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坄]]
