--- a/en/坅/坅.13000.wikitext
+++ b/en/坅/坅.13000.wikitext
@@ -19,7 +19,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[qǐn]] (qin3)|wg=ch'in<sup>3</sup>}}
+{{cmn-hanzi|pin=[[qǐn]] ([[qin3]])|wg=ch'in<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坅]]
