--- a/en/坊/坊.13005.wikitext
+++ b/en/坊/坊.13005.wikitext
@@ -24,7 +24,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[fāng]] (fang1)|wg=fang<sup>1</sup>}}
+{{cmn-hanzi|pin=[[fāng]] ([[fang1]])|wg=fang<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坊]]
