--- a/en/坋/坋.13006.wikitext
+++ b/en/坋/坋.13006.wikitext
@@ -22,7 +22,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[fèn]] (fen4), [[huài]] (huai4), [[péi]] (pei2)|wg=fen<sup>4</sup>, huai<sup>4</sup>, p'ei<sup>2</sup>}}
+{{cmn-hanzi|pin=[[fèn]] ([[fen4]]), [[huài]] ([[huai4]]), [[péi]] ([[pei2]])|wg=fen<sup>4</sup>, huai<sup>4</sup>, p'ei<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坋]]
