--- a/en/坍/坍.13008.wikitext
+++ b/en/坍/坍.13008.wikitext
@@ -25,7 +25,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[tān]] (tan1)|wg=t'an<sup>1</sup>}}
+{{cmn-hanzi|pin=[[tān]] ([[tan1]])|wg=t'an<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坍]]
