--- a/en/坎/坎.13009.wikitext
+++ b/en/坎/坎.13009.wikitext
@@ -26,7 +26,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[kǎn]] (kan3)|wg=k'an<sup>3</sup>}}
+{{cmn-hanzi|pin=[[kǎn]] ([[kan3]])|wg=k'an<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坎]]
