--- a/en/坐/坐.13011.wikitext
+++ b/en/坐/坐.13011.wikitext
@@ -28,7 +28,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[wù]] (wu4), [[zuò]] (zuo4)|wg=wu<sup>4</sup>, tso<sup>4</sup>}}
+{{cmn-hanzi|pin=[[wù]] ([[wu4]]), [[zuò]] ([[zuo4]])|wg=wu<sup>4</sup>, tso<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坐]]
