--- a/en/坑/坑.13012.wikitext
+++ b/en/坑/坑.13012.wikitext
@@ -28,7 +28,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[kēng]] (keng1)|wg=k'eng<sup>1</sup>}}
+{{cmn-hanzi|pin=[[kēng]] ([[keng1]])|wg=k'eng<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 ====Compounds====
