--- a/en/坕/坕.13016.wikitext
+++ b/en/坕/坕.13016.wikitext
@@ -7,7 +7,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[jīng]] (jing1)|wg=ching<sup>1</sup>}}
+{{cmn-hanzi|pin=[[jīng]] ([[jing1]])|wg=ching<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坕]]
