--- a/en/坞/坞.13025.wikitext
+++ b/en/坞/坞.13025.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|tra=塢|pin=[[wù]] (wu4)|wg=wu<sup>4</sup>}}
+{{cmn-hanzi|tra=塢|pin=[[wù]] ([[wu4]])|wg=wu<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坞]]
