--- a/en/坟/坟.13026.wikitext
+++ b/en/坟/坟.13026.wikitext
@@ -16,7 +16,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|tra=墳|pin=[[fén]] (fen2), [[pàn]] (pan4)|wg=fen<sup>2</sup>, p'an<sup>4</sup>}}
+{{cmn-hanzi|tra=墳|pin=[[fén]] ([[fen2]]), [[pàn]] ([[pan4]])|wg=fen<sup>2</sup>, p'an<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坟]]
