--- a/en/坡/坡.13028.wikitext
+++ b/en/坡/坡.13028.wikitext
@@ -24,7 +24,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[pō]] (po1)|wg=p'o<sup>1</sup>}}
+{{cmn-hanzi|pin=[[pō]] ([[po1]])|wg=p'o<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坡]]
