--- a/en/坣/坣.13030.wikitext
+++ b/en/坣/坣.13030.wikitext
@@ -7,7 +7,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[nì]] (ni4), [[tāng]] (tang1)|wg=ni<sup>4</sup>, t'ang<sup>1</sup>}}
+{{cmn-hanzi|pin=[[nì]] ([[ni4]]), [[tāng]] ([[tang1]])|wg=ni<sup>4</sup>, t'ang<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坣]]
