--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -11,7 +11,8 @@ From the Latin [[id est]], meaning “that is”.
 ==={{abbreviation}}===
 '''i.e.'''
 
-# That is, in other words, that is to say; in essence.
+# {{context|[[initialism]]}} That is; in other words; that is to say; in essence.
+#:''The three U.S. states on the west coast ('''i.e.''' Washington, Oregon, and California) have favorable climates.''
 
 ====Usage notes====
 *Use '''i.e.''' to explain or clarify a statement by either (exhaustively) listing options or by rephrasing the previous statement.
