--- a/en/坤/坤.13031.wikitext
+++ b/en/坤/坤.13031.wikitext
@@ -25,7 +25,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[kūn]] (kun1)|wg=k'un<sup>1</sup>}}
+{{cmn-hanzi|pin=[[kūn]] ([[kun1]])|wg=k'un<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坤]]
