--- a/en/坦/坦.13033.wikitext
+++ b/en/坦/坦.13033.wikitext
@@ -25,7 +25,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[tǎn]] (tan3)|wg=t'an<sup>3</sup>}}
+{{cmn-hanzi|pin=[[tǎn]] ([[tan3]])|wg=t'an<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坦]]
