--- a/en/坧/坧.13034.wikitext
+++ b/en/坧/坧.13034.wikitext
@@ -19,7 +19,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[zhī]] (zhi1)|wg=chih<sup>1</sup>}}
+{{cmn-hanzi|pin=[[zhī]] ([[zhi1]])|wg=chih<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坧]]
