--- a/en/坨/坨.13035.wikitext
+++ b/en/坨/坨.13035.wikitext
@@ -24,7 +24,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[tuó]] (tuo2)|wg=t'o<sup>2</sup>}}
+{{cmn-hanzi|pin=[[tuó]] ([[tuo2]])|wg=t'o<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坨]]
