--- a/en/坰/坰.13043.wikitext
+++ b/en/坰/坰.13043.wikitext
@@ -24,7 +24,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[jiōng]] (jiong1)|wg=chiung<sup>1</sup>}}
+{{cmn-hanzi|pin=[[jiōng]] ([[jiong1]])|wg=chiung<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坰]]
