--- a/en/坳/坳.13046.wikitext
+++ b/en/坳/坳.13046.wikitext
@@ -25,7 +25,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[ào]] (ao4)|wg=ao<sup>4</sup>}}
+{{cmn-hanzi|pin=[[ào]] ([[ao4]])|wg=ao<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坳]]
