--- a/en/坴/坴.13047.wikitext
+++ b/en/坴/坴.13047.wikitext
@@ -20,7 +20,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[kē]] (ke1), [[liù]] (liu4)|wg=k'o<sup>1</sup>, liu<sup>4</sup>}}
+{{cmn-hanzi|pin=[[kē]] ([[ke1]]), [[liù]] ([[liu4]])|wg=k'o<sup>1</sup>, liu<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坴]]
