--- a/en/坷/坷.13050.wikitext
+++ b/en/坷/坷.13050.wikitext
@@ -24,7 +24,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[kě]] (ke3)|wg=k'o<sup>3</sup>}}
+{{cmn-hanzi|pin=[[kě]] ([[ke3]])|wg=k'o<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坷]]
