--- a/en/坸/坸.13051.wikitext
+++ b/en/坸/坸.13051.wikitext
@@ -12,7 +12,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[bō]] (bo1), [[gòu]] (gou4)|wg=po<sup>1</sup>, kou<sup>4</sup>}}
+{{cmn-hanzi|pin=[[bō]] ([[bo1]]), [[gòu]] ([[gou4]])|wg=po<sup>1</sup>, kou<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坸]]
