--- a/en/坻/坻.13054.wikitext
+++ b/en/坻/坻.13054.wikitext
@@ -26,7 +26,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[chí]] (chi2), [[dǐ]] (di3)|wg=ch'ih<sup>2</sup>, ti<sup>3</sup>}}
+{{cmn-hanzi|pin=[[chí]] ([[chi2]]), [[dǐ]] ([[di3]])|wg=ch'ih<sup>2</sup>, ti<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坻]]
