--- a/en/坼/坼.13055.wikitext
+++ b/en/坼/坼.13055.wikitext
@@ -24,7 +24,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[chè]] (che4), [[la]] (la5)|wg=ch'e<sup>4</sup>, la<sup>5</sup>}}
+{{cmn-hanzi|pin=[[chè]] ([[che4]]), [[la]] ([[la5]])|wg=ch'e<sup>4</sup>, la<sup>5</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坼]]
