--- a/en/坿/坿.13058.wikitext
+++ b/en/坿/坿.13058.wikitext
@@ -15,7 +15,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[fù]] (fu4)|wg=fu<sup>4</sup>}}
+{{cmn-hanzi|pin=[[fù]] ([[fu4]])|wg=fu<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坿]]
