--- a/en/垂/垂.13061.wikitext
+++ b/en/垂/垂.13061.wikitext
@@ -27,7 +27,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[chuí]] (chui2)|wg=ch'ui<sup>2</sup>}}
+{{cmn-hanzi|pin=[[chuí]] ([[chui2]])|wg=ch'ui<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 ====Compounds====
