--- a/en/垌/垌.13071.wikitext
+++ b/en/垌/垌.13071.wikitext
@@ -24,7 +24,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[dòng]] (dong4)|wg=tung<sup>4</sup>}}
+{{cmn-hanzi|pin=[[dòng]] ([[dong4]])|wg=tung<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:垌]]
