--- a/en/垐/垐.13076.wikitext
+++ b/en/垐/垐.13076.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[cí]] (ci2)|wg=tz'u<sup>2</sup>}}
+{{cmn-hanzi|pin=[[cí]] ([[ci2]])|wg=tz'u<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:垐]]
