--- a/en/垑/垑.13077.wikitext
+++ b/en/垑/垑.13077.wikitext
@@ -7,7 +7,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[chǐ]] (chi3)|wg=ch'ih<sup>3</sup>}}
+{{cmn-hanzi|pin=[[chǐ]] ([[chi3]])|wg=ch'ih<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:垑]]
