--- a/en/垓/垓.13079.wikitext
+++ b/en/垓/垓.13079.wikitext
@@ -31,7 +31,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[gāi]] (gai1), [[hòu]] (hou4)|wg=kai<sup>1</sup>, hou<sup>4</sup>}}
+{{cmn-hanzi|pin=[[gāi]] ([[gai1]]), [[hòu]] ([[hou4]])|wg=kai<sup>1</sup>, hou<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:垓]]
