--- a/en/垕/垕.13081.wikitext
+++ b/en/垕/垕.13081.wikitext
@@ -24,7 +24,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[hòu]] (hou4)|wg=hou<sup>4</sup>}}
+{{cmn-hanzi|pin=[[hòu]] ([[hou4]])|wg=hou<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:垕]]
