--- a/en/垖/垖.13082.wikitext
+++ b/en/垖/垖.13082.wikitext
@@ -7,7 +7,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[duī]] (dui1), [[shǎng]] (shang3)|wg=tui<sup>1</sup>, shang<sup>3</sup>}}
+{{cmn-hanzi|pin=[[duī]] ([[dui1]]), [[shǎng]] ([[shang3]])|wg=tui<sup>1</sup>, shang<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:垖]]
