--- a/en/垛/垛.13087.wikitext
+++ b/en/垛/垛.13087.wikitext
@@ -22,7 +22,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[duǒ]] (duo3)|wg=to<sup>3</sup>}}
+{{cmn-hanzi|pin=[[duǒ]] ([[duo3]])|wg=to<sup>3</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:垛]]
