--- a/en/垡/垡.13093.wikitext
+++ b/en/垡/垡.13093.wikitext
@@ -15,7 +15,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[fá]] (fa2)|wg=fa<sup>2</sup>}}
+{{cmn-hanzi|pin=[[fá]] ([[fa2]])|wg=fa<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:垡]]
