--- a/en/垢/垢.13094.wikitext
+++ b/en/垢/垢.13094.wikitext
@@ -31,7 +31,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[gòu]] (gou4)|wg=kou<sup>4</sup>}}
+{{cmn-hanzi|pin=[[gòu]] ([[gou4]])|wg=kou<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:垢]]
