--- a/en/垧/垧.13099.wikitext
+++ b/en/垧/垧.13099.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[jiōng]] (jiong1)|wg=chiung<sup>1</sup>}}
+{{cmn-hanzi|pin=[[jiōng]] ([[jiong1]])|wg=chiung<sup>1</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:垧]]
