--- a/en/愊/愊.15646.wikitext
+++ b/en/愊/愊.15646.wikitext
@@ -15,7 +15,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[bì]] (bi4), [[qì]] (qi4)|wg=pi<sup>4</sup>, ch'i<sup>4</sup>}}
+{{cmn-hanzi|pin=[[bì]] ([[bi4]]), [[qì]] ([[qi4]])|wg=pi<sup>4</sup>, ch'i<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:愊]]
