--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -35,7 +35,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[è]] (e4)|wg=o<sup>4</sup>}}
+{{cmn-hanzi|pin=[[è]] ([[e4]])|wg=o<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 * '''Style''': [[Traditional Chinese]] 
