--- a/en/倩/倩.11043.wikitext
+++ b/en/倩/倩.11043.wikitext
@@ -3,9 +3,11 @@
 {{Han char|rn=9|rad=人|as=08|sn=10|four=2522<sub>7</sub>|canj=人手一月 (OQMB)}}
 # beautiful, lovely
 # son-in-law
+# Please, excusing oneself in Chaoshan hua. It is said as Cia'2. For example 倩食 cia'2 ziah 8 is a very polite way of asking people to eat. 
 ====References====
 {{Han ref|kx=0109.010|dkj=00791|dj=0231.100|hdz=10170.010|uh=5029|ud=20521|bh=ADC5|bd=44485}}
 ----
+
 ==Cantonese==
 ===Hanzi===
 {{yue-hanzi|jyut=|y=sin3}}
