--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -41,8 +41,7 @@ From {{F.}} ''[[beauté]]'', beauty, + Germanic ''[[-ful]]'', full of
 **See also [[Wikisaurus:beautiful woman]]
 
 ====Translations====
-{{trans-top|possessing charm and attractive(Brooke Jensen}}
-
+{{trans-top|possessing charm and attractive}}
 *[[Afrikaans]]: [[mooi]]
 *Albanian: i bukur {{m}}, e bukur {{f}}
 *[[Anglo-Saxon]]: [[wlitig]]
