--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -30,6 +30,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 *Danish: leg, spil
 *Dutch: [[spel]]
 *Esperanto: [[ludo]]
+*Ewe: [[fefe]] {{n}}
 *Finnish: [[leikki]], [[peli]]
 *French: [[jeu]] {{m}}
 *German: [[Spiel]] {{n}}
@@ -55,6 +56,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 *Chinese: [[戏剧]], [[戲劇]]
 *Danish: stykke, spil
 *Dutch: [[optreden]] {{n}}, [[schouwspel]] {{n}}, [[toneelstuk]] {{n}}, [[stuk]] {{n}}
+*Ewe: [[fefe]] {{n}}
 *Finnish: [[näytelmä]]
 *French: [[pièce]] {{f}}
 *German: [[Schauspiel]] {{n}}
