--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -20,7 +20,7 @@ From {{ON.}} [[fljóta]].
 #:''That '''float''' covered in roses is very pretty.''
 # {{finance}} Funds committed to be paid but not yet paid.
 #:''Our bank does a nightly sweep of accounts, to adjust the '''float''' so we stay within our reserves limit.''
-# {{cattag|finance|AU|and other Commonwealth countries?}} An offering of [[share]]s in a [[company]] (or [[unit]]s in a [[trust]]) to members of the public, normally followed by a listing on a [[stock exchange]].
+# {{context|finance|AU|and other Commonwealth countries?}} An offering of [[share]]s in a [[company]] (or [[unit]]s in a [[trust]]) to members of the public, normally followed by a listing on a [[stock exchange]].
 #:'''2006''', ''You don't actually need a broker to buy shares in a '''float''' when a company is about to be listed on the Australian Stock Exchange.'' &mdash; [[w:Australian Securities and Investments Commission|Australian Securities and Investments Commission]] financial tips article, ''Buying shares in a float'' [http://www.fido.asic.gov.au/fido/fido.nsf/print/Buying+shares+in+a+float?opendocument]
 # {{banking}} The total amount of checks/cheques or other drafts written against a bank account but not yet cleared and charged against the account.
 #:''No sir, your current '''float''' is not taken into account, when assets are legally garnished.''
@@ -79,6 +79,7 @@ Shares offered to the public:
 * [[initial public offering]]
 
 ===Intransitive verb===
+{{rfc-trverb|Intransitive verb}}
 {{en-verb}}
 
 # Of an object or substance, to be supported by a liquid of greater density than the object so as that part of the object or substance remains above the surface.
@@ -94,7 +95,7 @@ Shares offered to the public:
 # To move in a fluid manner.
 #:''The dancer '''floated''' gracefully around the stage.''
 # To automatically adjust a parameter as related parameters change.
-# (''[[finance]]'') To allow a price to be determined by the markets as opposed to by rule.
+# {{finance}} To allow a price to be determined by the markets as opposed to by rule.
 #:''The yen '''floats''' against the dollar.''
 
 ====Translations====
@@ -169,7 +170,7 @@ Shares offered to the public:
 #:''I '''floated''' the idea of free ice-cream on Fridays, but no one was interested.''
 # To extend a short-term loan to.
 #:''Could you '''float''' me $50 until payday?''
-# {{cattag|finance|AU|and other Commonwealth countries?}} To issue or sell [[share]]s in a [[company]] (or [[unit]]s in a [[trust]]) to members of the public, followed by [[listing]] on a [[stock exchange]].
+# {{context|finance|AU|and other Commonwealth countries?}} To issue or sell [[share]]s in a [[company]] (or [[unit]]s in a [[trust]]) to members of the public, followed by [[listing]] on a [[stock exchange]].
 #:'''2005''', ''He '''floated''' the company on the Milan Stock Exchange last December and sold 29 per cent of its shares, mostly to American investors.'' &mdash; article by Dewi Cooke, ''[[w:The Age|The Age]]'' newspaper, 21 June 2005 (about Mario Moretti Polegato) [http://www.theage.com.au/news/business/shoemaker-strides-for-world-domination/2005/06/20/1119250927926.html?from=moreStories]
 
 ====Translations====
@@ -192,8 +193,8 @@ Shares offered to the public:
 *{{ttbc|Ido}}: [[flotacar]]
 *{{ttbc|Spanish}}: [[flotar]]
 
-[[Category:Liquids]]
 [[Category:English ergative verbs]]
+[[Category:Liquids]]
 
 [[ar:float]]
 [[es:float]]
