--- a/en/坉/坉.13004.wikitext
+++ b/en/坉/坉.13004.wikitext
@@ -19,7 +19,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[tún]] (tun2)|wg=t'un<sup>2</sup>}}
+{{cmn-hanzi|pin=[[tún]] ([[tun2]])|wg=t'un<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坉]]
