--- a/en/坮/坮.13041.wikitext
+++ b/en/坮/坮.13041.wikitext
@@ -21,7 +21,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[āo]] (ao1), [[tái]] ([[tai2]])|wg=ao<sup>1</sup>, t'ai<sup>2</sup>}}
+{{cmn-hanzi|pin=[[āo]] ([[ao1]]), [[tái]] ([[tai2]])|wg=ao<sup>1</sup>, t'ai<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:坮]]
