--- a/en/垉/垉.13068.wikitext
+++ b/en/垉/垉.13068.wikitext
@@ -14,7 +14,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[páo]] (pao2), [[tóng]] ([[tong2]])|wg=p'ao<sup>2</sup>, t'ung<sup>2</sup>}}
+{{cmn-hanzi|pin=[[páo]] ([[pao2]]), [[tóng]] ([[tong2]])|wg=p'ao<sup>2</sup>, t'ung<sup>2</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:垉]]
