--- a/en/昶/昶.16991.wikitext
+++ b/en/昶/昶.16991.wikitext
@@ -26,7 +26,7 @@
 ----
 ==Mandarin==
 ===Hanzi===
-{{cmn-hanzi|pin=[[chǎng]] (chang3), [[chàng]] (chang4)|wg=ch'ang<sup>3</sup>, ch'ang<sup>4</sup>}}
+{{cmn-hanzi|pin=[[chǎng]] ([[chang3]]), [[chàng]] ([[chang4]])|wg=ch'ang<sup>3</sup>, ch'ang<sup>4</sup>}}
 # {{defn|Mandarin}}
 
 [[fr:昶]]
