--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -57,7 +57,7 @@
 #:''All that was left after the fire was the '''brick''' chimney''.
 
 ===Verb===
-'''brick'''[[Category:English verbs that lack inflection template]]
+{{en-verb}}
 
 # To hit someone using a brick.
 # (slang) To be a high state of anxiety: "Bricking it"
